sysfsutils (2.1.1-2) UNRELEASED; urgency=medium

  * Improve init script:
    - Do not use -o and -a for shell test command.
    - Pass -r to read built-in.
    - Use printf instead of undefined «echo -n».
    - Disable shellcheck following sourcing shell library file.
    - Quote directory variable to avoid word-splitting.

 -- Guillem Jover <guillem@debian.org>  Tue, 16 Aug 2022 14:03:51 +0200

sysfsutils (2.1.1-1) unstable; urgency=medium

  * New upstream release:
    - Update Homepage for github.com project.
    - Update watch file for github.com project.
    - Update upstream copyright years.
    - Remove all patches, merged upstream.
    - Do not install no longer provided NEWS file.
    - Fix over matching in cdev_name_equal(). Closes: #627048
    - Fix symlink canonicalization in sysfs_get_link(). Closes: #481015
  * Fix minimum versions in symbols file for sysfs_close_dev_tree and
    sysfs_read_dir_subdirs, which did not match their actual introduction
    in released tarballs from git history.
  * Remove sysfsutils postinst, unnecessary after bullseye.
  * Add support for the noudeb build profile.

 -- Guillem Jover <guillem@debian.org>  Sat, 28 Aug 2021 02:14:08 +0200

sysfsutils (2.1.0+repack-7) unstable; urgency=medium

  * Switch to debhelper compatibility level 13.
  * Switch to Standards-Version 4.5.1.
  * Fix README.Examples:
    - Use $() instead of `` shell syntax.
    - Remove trailing spaces.
    - Fix «e.g.» spelling and follow it by a «:».
  * Remove trailing whitespace from patch.
  * Add debian/upstream/metadata file.
  * Add Forwarded fields to patches.
  * Install the pkg-config file into a multiarch directory to support
    cross-building.

 -- Guillem Jover <guillem@debian.org>  Thu, 24 Dec 2020 18:32:50 +0100

sysfsutils (2.1.0+repack-6) unstable; urgency=medium

  * New maintainer. Closes: #689879
  * Update Vcs fields for move to git.hadrons.org.
  * Remove now unused debian/gbp.conf.